@@ -17,6 +17,7 @@
 <h3>Optional Tasks</h3>
 <a href="OptionalTasks/dotnet.html">.NET Tasks</a><br>
 <a href="OptionalTasks/antlr.html">ANTLR</a><br>
+<a href="OptionalTasks/attrib.html">Attrib</a><br>
 <a href="OptionalTasks/cab.html">Cab</a><br>
 <a href="OptionalTasks/chgrp.html">Chgrp</a><br>
 <a href="OptionalTasks/chown.html">Chown</a><br>
