@@ -174,6 +174,7 @@ vbc=org.apache.tools.ant.taskdefs.optional.dotnet.VisualBasicCompile
 symlink=org.apache.tools.ant.taskdefs.optional.unix.Symlink
 chgrp=org.apache.tools.ant.taskdefs.optional.unix.Chgrp
 chown=org.apache.tools.ant.taskdefs.optional.unix.Chown
+attrib=org.apache.tools.ant.taskdefs.optional.windows.Attrib
 
 # deprecated ant tasks (kept for back compatibility)
 starteam=org.apache.tools.ant.taskdefs.optional.scm.AntStarTeamCheckOut
